2008-08-17  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

        Reviewed by Maciej.

        Change the limit in the deep recursion test to match changes in
        the counting of constants.

        * fast/js/deep-recursion-test.html:

2008-08-17  Oliver Hunt  <oliver@apple.com>

        Reviewed by Cameron Zwarich.

        <rdar://problem/6150322> In Gmail, a crash occurs at KJS::Machine::privateExecute() when applying list styling to text after a quote had been removed
        <https://bugs.webkit.org/show_bug.cgi?id=20386>

        Testcases for determining scope chain depth in a function with out a full scope chain.

        * fast/js/exception-try-finally-scope-error-expected.txt: Added.
        * fast/js/exception-try-finally-scope-error.html: Added.
        * fast/js/resources/exception-try-finally-scope-error.js: Added.

2008-08-15  Dan Bernstein  <mitz@apple.com>

        Rubber-stamped by Tim Hatcher.

        - update results for console.dir

        * fast/dom/Window/window-properties-expected.txt:

2008-08-14  Simon Fraser  <simon.fraser@apple.com>

        Fix testcase and add pixel results for testcase in
        https://bugs.webkit.org/show_bug.cgi?id=20367

        * platform/mac/fast/css/font-face-in-media-rule-expected.checksum: Added.
        * platform/mac/fast/css/font-face-in-media-rule-expected.png: Added.
        * platform/mac/fast/css/font-face-in-media-rule-expected.txt:

2008-08-13  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Eric Seidel

        Fix @font-face inside @media rule crash.
        https://bugs.webkit.org/show_bug.cgi?id=20367
        
        * fast/css/font-face-in-media-rule.html: Added.
        * platform/mac/fast/css/font-face-in-media-rule-expected.txt: Added.

2008-08-13  Eric Seidel  <eric@webkit.org>

        Reviewed by Sam.

        Match HTML5 spec by throwing INVALID_STATE_ERR when
        createPattern is called and the HTMLImageElement is not
        yet done loading the image (!isComplete)