@@ -1,0 +1,10 @@
+<html lang="en">
+<head>
+  <style>
+  .test { -webkit-transition: 1.5s; }
+  </style>
+</head>
+<body>
+  <p class="test">Test should not crash</p>
+</body>
+</html>
