@@ -1,3 +1,13 @@
+2008-08-15  Simon Fraser  <simon.fraser@apple.com>
+
+        Reviewed by Dave Hyatt
+        
+        Testcase for crash when parsing transition properties:
+        https://bugs.webkit.org/show_bug.cgi?id=20408
+
+        * fast/css/transition_shorthand_parsing.html: Added.
+        * platform/mac/fast/css/transition_shorthand_parsing-expected.txt: Added.
+
 2008-08-17  Cameron Zwarich  <cwzwarich@uwaterloo.ca>
 
         Reviewed by Maciej.
